[gd_scene load_steps=4 format=3 uid="uid://d2p27dh50roqa"]

[ext_resource type="Script" path="res://addons/legadot/scenes/debug_menu.gd" id="1_3r2ho"]

[sub_resource type="Theme" id="Theme_2guc0"]
default_font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_v5mwe"]
font_size = 36

[node name="DebugMenu" type="Control"]
layout_mode = 3
anchor_right = 0.178819
anchor_bottom = 0.179012
offset_right = 879.0
offset_bottom = 477.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_2guc0")
script = ExtResource("1_3r2ho")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="DebugLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_v5mwe")

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BeatLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Measure, Beat, Time Signature:"

[node name="SongControls" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/SongControls"]
layout_mode = 2
text = "Play"

[node name="PauseButton" type="Button" parent="MarginContainer/VBoxContainer/SongControls"]
layout_mode = 2
text = "Pause"

[node name="StopButton" type="Button" parent="MarginContainer/VBoxContainer/SongControls"]
layout_mode = 2
text = "Stop"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SongControls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SongControls/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="SongProgress" type="HSlider" parent="MarginContainer/VBoxContainer/SongControls/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 0.1
scrollable = false

[node name="VerticalHorizontalControlsContainter" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VerticalHorizontalControlsContainter"]
layout_mode = 2
text = "V State:"

[node name="VerticalOption" type="OptionButton" parent="MarginContainer/VBoxContainer/VerticalHorizontalControlsContainter"]
layout_mode = 2
allow_reselect = true

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/VerticalHorizontalControlsContainter"]
layout_mode = 2
text = "H State:"

[node name="HorizontalOption" type="OptionButton" parent="MarginContainer/VBoxContainer/VerticalHorizontalControlsContainter"]
layout_mode = 2
allow_reselect = true

[node name="StreamControls" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/StreamControls"]
layout_mode = 2
text = "Streams: "

[node name="StreamsScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/StreamControls"]
layout_mode = 2
size_flags_horizontal = 3
vertical_scroll_mode = 0

[node name="StreamsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/StreamControls/StreamsScrollContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GroupControls" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GroupControls"]
layout_mode = 2
text = "Groups: "

[node name="GroupsScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/GroupControls"]
layout_mode = 2
size_flags_horizontal = 3
vertical_scroll_mode = 0

[node name="GroupsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GroupControls/GroupsScrollContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QueueablesContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/QueueablesContainer"]
layout_mode = 2
text = "Queueables: "

[node name="QueuablesScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/QueueablesContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical_scroll_mode = 0

[node name="QueueablesList" type="HBoxContainer" parent="MarginContainer/VBoxContainer/QueueablesContainer/QueuablesScrollContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ActionsContainer"]
layout_mode = 2
text = "Actions: "

[node name="ActionsScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ActionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical_scroll_mode = 0

[node name="ActionsList" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ActionsContainer/ActionsScrollContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="MarginContainer/VBoxContainer/SongControls/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SongControls/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SongControls/StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="drag_started" from="MarginContainer/VBoxContainer/SongControls/HBoxContainer/VBoxContainer/SongProgress" to="." method="_on_song_progress_drag_started"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/VerticalHorizontalControlsContainter/VerticalOption" to="." method="_on_vertical_option_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/VerticalHorizontalControlsContainter/HorizontalOption" to="." method="_on_horizontal_option_item_selected"]
